# twlib

./: .bumpversion.cfg  .confguard  .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  setup.cfg  tox.ini
.github/workflows/: publish-docker.yml  test.yml
.run/: Template Python tests.run.xml
src/twlib/: __init__.py  __main__.py  environment.py  git_open.py  lib.py  main.py
tests/: conftest.py  test_environment.py  test_git_open.py  test_lib.py  test_main.py  test_pattern.py
tests/resources/: bkp_vimwiki_links.bkp  input.heic
tests/resources/ref_proj/: .confguard
tests/resources/ref_proj/.run/: dummmy.xml
tests/resources/ref_proj/lks/: xxx.txt
tests/resources/ref_proj/lks/d/: .run
tests/resources/ref_proj/xxx/: xxx.txt
